; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/potentiometer/extr_tpl0102.c_tpl0102_read_avail.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/potentiometer/extr_tpl0102.c_tpl0102_read_avail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i32 }
%struct.tpl0102_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@IIO_VAL_INT = common dso_local global i32 0, align 4
@IIO_AVAIL_RANGE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32**, i32*, i32*, i64)* @tpl0102_read_avail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tpl0102_read_avail(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32** %2, i32* %3, i32* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.iio_dev*, align 8
  %9 = alloca %struct.iio_chan_spec*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca %struct.tpl0102_data*, align 8
  store %struct.iio_dev* %0, %struct.iio_dev** %8, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i64 %5, i64* %13, align 8
  %15 = load %struct.iio_dev*, %struct.iio_dev** %8, align 8
  %16 = call %struct.tpl0102_data* @iio_priv(%struct.iio_dev* %15)
  store %struct.tpl0102_data* %16, %struct.tpl0102_data** %14, align 8
  %17 = load i64, i64* %13, align 8
  switch i64 %17, label %35 [
    i64 128, label %18
  ]

18:                                               ; preds = %6
  %19 = load %struct.tpl0102_data*, %struct.tpl0102_data** %14, align 8
  %20 = getelementptr inbounds %struct.tpl0102_data, %struct.tpl0102_data* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @ARRAY_SIZE(i32* %23)
  %25 = load i32*, i32** %12, align 8
  store i32 %24, i32* %25, align 4
  %26 = load %struct.tpl0102_data*, %struct.tpl0102_data** %14, align 8
  %27 = getelementptr inbounds %struct.tpl0102_data, %struct.tpl0102_data* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = load i32**, i32*** %10, align 8
  store i32* %30, i32** %31, align 8
  %32 = load i32, i32* @IIO_VAL_INT, align 4
  %33 = load i32*, i32** %11, align 8
  store i32 %32, i32* %33, align 4
  %34 = load i32, i32* @IIO_AVAIL_RANGE, align 4
  store i32 %34, i32* %7, align 4
  br label %38

35:                                               ; preds = %6
  %36 = load i32, i32* @EINVAL, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %35, %18
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local %struct.tpl0102_data* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
